--- a/verificacao-cpf/verificaCpf.html
+++ b/verificacao-cpf/verificaCpf.html
@@ -8,25 +8,107 @@
     <title>Verificação Cpf</title>
 </head>
 <body>
-    <form action="" name="formulario" onsubmit="return validacao()">
+    <form action="" name="formulario" onsubmit="return verifica()">
+        <div>
+            <label>Digite seu Nome:</label>
+            <input type="text" required>
+        </div>
         <div>
             <label>Digite seu CPF:</label>
-            <input type="text" id="cpf">
+            <input type="text" id="cpff" required>
         </div>
-        <input type="submit">
+        <div>
+            <label>Digite sua Senha:</label>
+            <input type="password" id="input_senha1" required>
+        </div>
+        <div>
+            <label>Confirme sua Senha:</label>
+            <input type="password" id="input_senha2" required>
+        </div>
+        <input class="btn" value="Cadastrar" type="submit">
     </form>
 </body>
 </html>
 <script>
-    function validacao(){
-        var valorCpf = document.getElementById("cpf").value;
 
-        if (valorCpf == '11111111111'||'22222222222'||'33333333333'||'44444444444'||'55555555555'||'66666666666'||'77777777777'||'88888888888'||'99999999999'||'00000000000'){ //verifiação de números iguais
-            alert("Cpf com todos os digitos iguais, favor inserir novamente.");
-            return false;
-        }else{
-            var soma = 0; //variavel que somará os números
-            
-        }
-    }
+function verifica() {
+  input_senha2.style.border = "3px solid green";
+  input_senha1.style.border = "3px solid green";
+  cpff.style.border = "3px solid green";
+
+// declaração das váriaveis
+var senha1 = document.getElementById("input_senha1").value;
+var senha2 = document.getElementById("input_senha2").value;
+var cpf = document.getElementById("cpff").value; //pegar o cpf digitado
+var cpfSeparado = cpf.split(""); // O método split está separando cada dígito do CPF em campos separados do vetor "cpf_list"
+var soma1 = 0; //variavel q vai acomular o suposto 10° digito
+var soma2 = 0; //variavel q vai acomular o suposto 11° digito
+var numerosIguais = [
+  "00000000000",
+  "11111111111",
+  "22222222222",
+  "33333333333",
+  "44444444444",
+  "55555555555",
+  "66666666666",
+  "77777777777",
+  "88888888888",
+  "99999999999",
+];
+
+  //VERIFICAÇÃO DAS SENHAS
+  if(senha1 != senha2){ 
+    alert("Senhas incorretas");
+
+    input_senha2.style.border = "3px solid red"; //mudar cor da senha pra vermehlo
+    input_senha1.style.border = "3px solid red"; 
+    cpff.style.border = "2px solid black"; //mudar cor do cpf para preto
+
+    return false;
+  }
+
+  //VERIFICAÇÃO DO CPF
+  if (cpf.length != 11) { // Verifica se o CPF tem o tamanho correto de 11 digitos
+    alert("Cpf com quantidade errada de digitos!");
+    cpff.style.border = "2px solid red";
+    return false;
+  }
+
+  // Verifica se todos os dígitos são iguais
+  if (cpf == numerosIguais[0 || 1 || 2 || 3 || 4 || 5 || 6 || 7 || 8 || 9]) {
+    alert("Cpf com todos os dígitos iguais");
+    cpff.style.border = "2px solid red";
+    return false;
+  }
+
+  // Verificação do primeiro digito verificador
+  for (cont = 0; cont < 9; cont++) {
+    soma1 += cpfSeparado[cont] * (10 - cont); //atribui a variavel soma1 o numero do cpf_list (cpf_list(0))
+  }
+  if (soma1 % 11 > 1 || soma1 % 11 < 0) { // se ele for menor q 1 ou maior q 0 (0,1) o número tem q ser 0 por isso o else 0
+    soma1 = 11 - (soma1 % 11);
+  } else {
+    soma1 = 0;
+  }
+
+  // Verificação do segundo dígito verificador
+  for (cont = 0; cont < 10; cont++) {
+    soma2 += cpfSeparado[cont] * (11 - cont);
+  }
+  if (soma2 % 11 > 1 || soma2 % 11 < 0) {
+    soma2 = 11 - (soma2 % 11);
+  } else {
+    soma2 = 0;
+  }
+
+  // Verifica se os dígitos verificadores são iguais aos do número fornecido
+  if (soma1 != cpfSeparado[9] || soma2 != cpfSeparado[10]) {
+    alert("Cpf Inválido!");
+    cpff.style.border = "2px solid red";
+    return false;
+  }
+
+  return true;
+}
+
 </script>
